Fix flex-box layout issue
It was not taking into account the scroll-bar width in its calculations.
This now always shows a scroll-bar, but that should be fine.

--- a/css/map-list.css
+++ b/css/map-list.css
@@ -1,6 +1,6 @@
 .map-list {
   box-sizing: border-box;
-  overflow-y: auto;
+  overflow-y: scroll;
   padding: 20px;
 }
 
